# cub3d

./: CMakeLists.txt  Makefile  cub3D  cub3d.h  first_main.  main.c  test.cub
base/: ft_base.c  ft_dist_and_dot_wall.c  ft_draw_sprite.c  ft_draw_srite.c  ft_full_window.c  ft_game_first_param.c  ft_key_press.c  ft_key_scan.c  ft_print_line.c  ft_screenshot.c  ft_xmp_to_img.c
exit/: ft_exit.c
libft/: get_next_line.h
parser/: cub3d.h  ft_check_args.c  ft_chek_map.c  ft_make_array.c  ft_parser.c  ft_take_param.c  ft_take_param_2.c  get_next_line.h  main.c  parser.c  parser.h
